--- a/ScreenSound.web/Pages/Artistas.razor
+++ b/ScreenSound.web/Pages/Artistas.razor
@@ -1,5 +1,7 @@
-﻿<h3>Artistas</h3>
+﻿@page "/Artistas"
+<h3>Artistas</h3>
+<h4>@Mensagem</h4>
 
 @code {
-
+    public string Mensagem { get; set; } = "Olá mundo!";
 }
