feat: add componentes razor

--- a/ScreenSound.web/_Imports.razor
+++ b/ScreenSound.web/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using ScreenSound.web
 @using ScreenSound.web.Layout
+@using ScreenSound.web.Response
+@using ScreenSound.web.Services
