--- a/ScreenSound.web/Pages/Artistas.razor
+++ b/ScreenSound.web/Pages/Artistas.razor
@@ -1,7 +1,26 @@
 ﻿@page "/Artistas"
+@inject ArtistasAPI artistasAPI
+
 <h3>Artistas</h3>
-<h4>@Mensagem</h4>
+@if (artistas is not null)
+{
+    foreach (var artista in artistas)
+    {
+        <p>@artista.Nome</p>
+    }
+}
+else
+{
+    <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+}
 
 @code {
-    public string Mensagem { get; set; } = "Olá mundo!";
+    private ICollection<ArtistaResponse>? artistas;
+
+    protected override async Task OnInitializedAsync()
+    {
+        artistas = await artistasAPI.GetArtistasAsync();
+    }
 }
