feat: adiciona mudBlazer

--- a/ScreenSound.web/_Imports.razor
+++ b/ScreenSound.web/_Imports.razor
@@ -10,3 +10,7 @@
 @using ScreenSound.web.Layout
 @using ScreenSound.web.Response
 @using ScreenSound.web.Services
+@using MudBlazor
+@using MudBlazor.Utilities
+@using ScreenSound.Web.Layout
+
