--- a/ScreenSound.web/Componentes/CardArtista.razor
+++ b/ScreenSound.web/Componentes/CardArtista.razor
@@ -1,5 +1,5 @@
 ﻿<MudCard>
-    <MudCardMedia Image="images/cardArtista.png"></MudCardMedia>
+    <MudCardMedia Image=@Imagem></MudCardMedia>
     <MudCardHeader>
         <CardHeaderContent>
             <MudText Typo="Typo.h6">@Artista!.Nome</MudText>
@@ -19,5 +19,11 @@
 @code {
     [Parameter]
     public ArtistaResponse? Artista { get; set; }
+    public string? Imagem { get; set; }
+
+    protected override void OnInitialized()
+    {
+        Imagem = Artista!.FotoPerfil!.Contains("Foto") ? $"https://localhost:7123/{Artista!.FotoPerfil}" : "images/cardArtista.png";
+    }
 
 }
