--- a/ScreenSound.web/Pages/EditarArtista.razor
+++ b/ScreenSound.web/Pages/EditarArtista.razor
@@ -68,7 +68,7 @@
 
     private async Task Editar()
     {
-        var requestEdit = new ArtistaRequestEdit(Artista!.Id, nome!, biografia!);
+        var requestEdit = new ArtistaRequestEdit(Artista!.Id, nome!, biografia!, "");
         await artistasAPI.UpdateArtistaAsync(requestEdit);
         navigationManager.NavigateTo("/Artistas");
     }
