--- a/ScreenSound.web/Pages/CadastrarMusica.razor
+++ b/ScreenSound.web/Pages/CadastrarMusica.razor
@@ -16,7 +16,7 @@
                       Required="true"
                       RequiredError="Campo obrigatório." />
 
-        <MudSelect Class="mt-4" T="ArtistaResponse" Label="Artistas" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
+        <MudSelect Class="mt-4" T="ArtistaResponse" Label="Artistas" ValueChanged="@ArtistaSelecionado"  Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
             @if (Artistas is not null)
             {
                 @foreach (var artista in Artistas)
@@ -32,7 +32,7 @@
                          Lines="1"
                          Required="true"
                          RequiredError="Campo obrigatório." />
-        <MudSelect Class="mt-4" T="GeneroResponse" Label="Gêneros" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
+        <MudSelect Class="mt-4" T="GeneroResponse" Label="Gêneros" ValueChanged="@GeneroSelecionado" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
             @if (Generos is not null)
             {
                 @foreach (var genero in Generos)
@@ -40,6 +40,16 @@
                     <MudSelectItem Value="genero" />
                 }
             }
+
+            @if (GenerosSelecionados is not null)
+            {
+                foreach (var genero in GenerosSelecionados)
+                {
+                    <MudAlert Severity="Severity.Info">@(genero.Nome) adicionado como gênero da música.</MudAlert>
+                }
+
+            }
+
         </MudSelect>
 
         <div class="d-flex align-center justify-space-between mt-4">
@@ -63,10 +73,29 @@
     private int anoLancamento;
     private ICollection<ArtistaResponse>? Artistas { get; set; }
     private ICollection<GeneroResponse>? Generos { get; set; }
+    
+    private List<GeneroResponse>? GenerosSelecionados { get; set; } = new();
+    private ArtistaResponse? ArtistaDaMusica { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
         Artistas = await artistasAPI.GetArtistasAsync();
         Generos = await generoAPI.GetGenerosAsync();
+    }
+
+    private void ArtistaSelecionado(ArtistaResponse artista)
+    {
+        ArtistaDaMusica = artista;
+    }
+
+    private void GeneroSelecionado(GeneroResponse genero)
+    {
+        if (GenerosSelecionados is not null)
+        {
+            if (!GenerosSelecionados.Contains(genero))
+            {
+                GenerosSelecionados.Add(genero);
+            }
+        }
     }
 }
