--- a/ScreenSound.web/Pages/CadastrarMusica.razor
+++ b/ScreenSound.web/Pages/CadastrarMusica.razor
@@ -2,6 +2,7 @@
 
 @inject GeneroAPI generoAPI
 @inject ArtistasAPI artistasAPI
+@inject MusicasAPI musicaAPI
 @inject NavigationManager navigationManager
 
 <MudPaper Class="px-8 pt-2 pb-4 mx-12 my-8" Justify="Justify.Center">
@@ -55,6 +56,7 @@
         <div class="d-flex align-center justify-space-between mt-4">
             <MudButton Variant="Variant.Filled"
                        Color="Color.Primary"
+                       @onclick="Cadastrar"
                        Class="ml-auto">
                 Cadastrar
             </MudButton>
@@ -97,5 +99,23 @@
                 GenerosSelecionados.Add(genero);
             }
         }
+    }
+
+    private List<GeneroRequest> GenerosRequest { get; set; } = new();
+    public async Task Cadastrar()
+    {
+        if (GenerosSelecionados is not null)
+        {
+            foreach (var genero in GenerosSelecionados)
+            {
+                GenerosRequest.Add(new GeneroRequest(genero.Nome, genero.Descricao));
+            }
+        }
+
+        var musicaRequest = new MusicaRequest(nome!, ArtistaDaMusica!.Id, anoLancamento, GenerosRequest);
+        await musicaAPI.AddMusicaAsync(musicaRequest);
+
+        navigationManager.NavigateTo("/MusicasPorArtista");
+
     }
 }
