--- a/ScreenSound.web/Componentes/CardMusica.razor
+++ b/ScreenSound.web/Componentes/CardMusica.razor
@@ -8,6 +8,14 @@
     <MudCardContent>
         <MudText Typo="Typo.body2">Artista/Banda:@Musica!.NomeArtista</MudText>
     </MudCardContent>
+    <MudCardContent>
+        <MudCardActions>
+    <MudButton Color="Color.Warning"
+        Variant="Variant.Outlined"
+        Href=@($"/EditarMusica/{Musica!.Nome}")>Detalhes
+    </MudButton>
+</MudCardActions>
+    </MudCardContent>
 </MudCard>
 
 @code {
